02-ingress/test.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vhosts-blue-green
  #annotations:
    # use the shared ingress-nginx
    #kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: blue.user-00.labs.sass.ro
    http:
      paths:
      - path: /
        backend:
          serviceName: svc-blue
          servicePort: 8080
  - host: green.user-00.labs.sass.ro
    http:
      paths:
      - path: /
        backend: 
          serviceName: svc-green
          servicePort: 8080
